fix otherfix email

--- a/QuanLyCH/Views/Home/Contact.cshtml
+++ b/QuanLyCH/Views/Home/Contact.cshtml
@@ -15,3 +15,7 @@
     <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
+
+<div>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d476861.2536972229!2d105.37247938027818!3d20.973446113482034!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135ab9926e7bd67%3A0x580e078874d5df1e!2zVsSDbiBNacOqzIF1IOKAkyBRdcO0zIFjIFTGsMyJIEdpYcyBbQ!5e0!3m2!1svi!2s!4v1655907249802!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
