--- a/QuanLyCH/Views/Shared/_Layout.cshtml
+++ b/QuanLyCH/Views/Shared/_Layout.cshtml
@@ -50,8 +50,8 @@
 
                         }
                     }
-                    <li>@Html.Partial("~/Views/GioHang/GioHangPartial.cshtml")</li>
-                    @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+@*                    <li>@Html.Partial("~/Views/GioHang/GioHangPartial.cshtml")</li>
+*@                    @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
 
 
                 </ul>
@@ -165,7 +165,7 @@
                 </a>
 
                 <!-- Twitter -->
-                <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                <a class="btn btn-outline-light btn-floating m-1" href="https://www.facebook.com/profile.php?id=100010381846255" role="button" target="_blank">
                     <i class="fab fa-twitter"></i>
                 </a>
 
@@ -231,6 +231,7 @@
 
 
                     </div>
+
                     @Html.Partial("~/Views/Giay/Map.cshtml")
 
 
