--- a/QuanLyCH/Views/GioHang/DatHang.cshtml
+++ b/QuanLyCH/Views/GioHang/DatHang.cshtml
@@ -124,7 +124,7 @@
                         <div class="form-group">
                             <p>Ngày giao: </p>
                             <p style-"font-weight:bold">
-                                <input type="date" name="NgayGiao" />
+                                <input type="date" name="NgayGiao" id="NgayGiao" />
                             </p>
                         </div>
                     </div>
@@ -132,8 +132,12 @@
                 <div style="height:40px">
                     <p></p>
                     <p style="font-weight:bold">
-                        <a  value="Xác nhận" class="btn btn-success" href="@Url.Action("sendPass","NguoiDung")" src=" @Url.Action("XacnhanDonhang", "GioHang")" >Xac Nhan </a>
-                        <a href="@Url.Action("Payment","momo")">Thanh toán</a>
+
+                        <input value="Xác nhận" class="btn btn-success" href="" type="submit"  />
+                        
+                        <a  class="btn btn-info" href="@Url.Action("sendPass","NguoiDung")" >Xac Nhan Qua Mail</a>
+
+                        <a class="btn btn-danger" href="@Url.Action("Payment","momo")">Thanh toán Momo</a>
                     </p>
                 </div>
                 <hr class="colorgraph">
@@ -143,3 +147,27 @@
         </div>
     }
 </div>
+
+<script>
+    function setInputDate(_id) {
+        var _dat = document.querySelector(_id);
+        var hoy = new Date(),
+            d = hoy.getDate(),
+            m = hoy.getMonth() + 1,
+            y = hoy.getFullYear(),
+            data;
+
+        if (d < 10) {
+            d = "0" + d;
+        };
+        if (m < 10) {
+            m = "0" + m;
+        };
+
+        data = y + "-" + m + "-" + d;
+        console.log(data);
+        _dat.value = data;
+    };
+
+    setInputDate("#NgayGiao");
+</script>
