--- a/QuanLyCH/Views/Home/Index.cshtml
+++ b/QuanLyCH/Views/Home/Index.cshtml
@@ -35,16 +35,17 @@
 
 <h1 style="display:flex;justify-content:center; font-weight:bold;">Shop Giày</h1>
 @*@using (Html.BeginForm("Index", "Home", FormMethod.Get, new { @class = "form-inline" }))
-{
-    <div class="form-group form-inline" style="display: flex; align-items: center; justify-content: center; margin:20px;">
-        <input type="Text" class="form-control col-md-10" value="@ViewBag.Keyword" name="searchString" placeholder="Nhập tên cần tìm">
-        <input type="submit" class="btn  btn-primary" value="Tìm Giày" style="margin-left:10px;">
-    </div>
+    {
+        <div class="form-group form-inline" style="display: flex; align-items: center; justify-content: center; margin:20px;">
+            <input type="Text" class="form-control col-md-10" value="@ViewBag.Keyword" name="searchString" placeholder="Nhập tên cần tìm">
+            <input type="submit" class="btn  btn-primary" value="Tìm Giày" style="margin-left:10px;">
+        </div>
 
-}*@
+    }*@
 
 
 <div class="row show-on-scroll right-to-left">
+
 
 
     @foreach (var item in Model)
@@ -80,7 +81,10 @@
                     *@
                     <div class="card">
                         <div class="card__img">
-                            <img src="@item.hinh" alt="">
+                            <a href="~/Giay/Detail/@item.maloai">
+                                <img src="@item.hinh" alt="">
+                            </a>
+                            
                         </div>
                         <h2>@item.tengiay</h2>
                         <div class="card__social">
@@ -124,7 +128,7 @@
 
                             }
                             @*<a class="btn btn-default" href="@Url.Action("Detail", "Giay",new { @id = item.magiay})">Thong Tin</a>
-        <a class="btn btn-success" href="@Url.Action("ThemGioHang", "GioHang",new { @id = item.magiay, @strURL = Request.Url.ToString() })">Đặt mua</a>*@
+                                <a class="btn btn-success" href="@Url.Action("ThemGioHang", "GioHang",new { @id = item.magiay, @strURL = Request.Url.ToString() })">Đặt mua</a>*@
                         </div>
 
                     </div>
@@ -327,6 +331,9 @@
 </style>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script>
+
+   
+
     $(document).ready(function () {
         var maxLength = 100;
         $(".show-read-more").each(function () {
