--- a/QuanLyCH/Views/NguoiDung/DangKy.cshtml
+++ b/QuanLyCH/Views/NguoiDung/DangKy.cshtml
@@ -330,12 +330,13 @@
 
                     <hr class="colorgraph">
                     <div class="row">
-                        <div class="form-group">
-                            <div class="col-xs-8 col-sm-9 col-md-9">
+                        <div class="form-group" style="width:100%;">
+                            <div class="col-xs-8 col-sm-9 col-md-9" style="width:100%; display:flex; justify-content:space-between; align-items:center;">
                                 <input type="submit" value="Create" class="btn btn-success" style="width:100%;" />
+                                <a class="btn btn-info" href="@Url.Action("forgotpass", "NguoiDung")" > Quen Mat Khau</a>
                             </div>
-                            <div>
-                                @Html.ActionLink("Back to List", "Index")
+                            <div class="col-xs-8 col-sm-9 col-md-9">
+                                
                             </div>
                         </div>
 
